<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="id.solvin.dev.view.activities.ActivityResetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_margin_24m"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/reset_password_mobile_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_48m"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Masukkan No. HP"
                    android:textAlignment="center"
                    android:textColor="@color/colorHeader"
                    android:textSize="@dimen/default_font_size_22m"
                    style="@style/Montserrat_Bold" />

                <EditText
                    android:id="@+id/reset_password_mobile_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_16m"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/default_font_size_24m"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:background="@android:color/transparent"
                    style="@style/SourceSansPro_Light" />

                <LinearLayout
                    android:id="@+id/reset_password_error_mobile_message_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_16m"
                    android:layout_marginTop="@dimen/default_margin_8m"
                    android:layout_marginRight="@dimen/default_margin_16m"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_default_height"
                        android:background="@color/red_500" />

                    <TextView
                        android:id="@+id/reset_password_error_mobile_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/default_margin_8m"
                        android:text="@string/registration_error_message1"
                        android:textColor="@color/red_500"
                        android:textSize="@dimen/default_font_size_14m"
                        style="@style/SourceSansPro_Regular" />

                </LinearLayout>

                <Button
                    android:id="@+id/reset_password_mobile_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_24m"
                    android:layout_marginBottom="@dimen/default_margin_8m"
                    android:text="KIRIM"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_font_size_16m"
                    android:stateListAnimator="@null"
                    style="@style/SourceSansPro_Regular" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reset_password_code_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_48m"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Masukkan Kode Verifikasi"
                    android:textAlignment="center"
                    android:textColor="@color/colorHeader"
                    android:textSize="@dimen/default_font_size_22m"
                    style="@style/Montserrat_Bold" />

                <EditText
                    android:id="@+id/reset_password_code_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_16m"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/default_font_size_24m"
                    android:textStyle="bold"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:background="@android:color/transparent"
                    style="@style/SourceSansPro_Light" />

                <LinearLayout
                    android:id="@+id/reset_password_error_code_message_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_16m"
                    android:layout_marginTop="@dimen/default_margin_8m"
                    android:layout_marginRight="@dimen/default_margin_16m"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/divider_default_height"
                        android:background="@color/red_500" />

                    <TextView
                        android:id="@+id/reset_password_error_code_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/default_margin_8m"
                        android:text="@string/registration_error_message3"
                        android:textColor="@color/red_500"
                        android:textSize="@dimen/default_font_size_14m"
                        style="@style/SourceSansPro_Regular" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_16m"
                    android:layout_marginTop="@dimen/default_margin_16m"
                    android:layout_marginRight="@dimen/default_margin_16m"
                    android:gravity="center_horizontal"
                    android:text="@string/text_reset_password_code_confirmation"
                    android:textAlignment="center"
                    android:textColor="@color/colorSubHeader"
                    android:textSize="@dimen/default_font_size_16m"
                    style="@style/SourceSansPro_Light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_16m"
                    android:gravity="center_horizontal"
                    android:text="@string/text_yet_code_received"
                    android:textAlignment="center"
                    android:textColor="@color/colorSubHeader"
                    android:textSize="@dimen/default_font_size_16m"
                    style="@style/SourceSansPro_Light" />

                <TextView
                    android:id="@+id/reset_password_timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_4m"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/default_font_size_16m"
                    android:visibility="gone"
                    style="@style/SourceSansPro_Light" />

                <TextView
                    android:id="@+id/reset_password_resend_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_4m"
                    android:gravity="center_horizontal"
                    android:text="Kirim ulang"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/default_font_size_16m"
                    android:textStyle="bold"
                    style="@style/SourceSansPro_Light" />

                <Button
                    android:id="@+id/reset_password_code_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_24m"
                    android:layout_marginBottom="@dimen/default_margin_8m"
                    android:text="KONFIRMASI"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_font_size_16m"
                    android:stateListAnimator="@null"
                    style="@style/SourceSansPro_Regular" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reset_password_new_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_48m"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Reset Password"
                    android:textAlignment="center"
                    android:textColor="@color/colorHeader"
                    android:textSize="@dimen/default_font_size_22m"
                    style="@style/Montserrat_Bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_16m"
                    android:layout_marginTop="@dimen/default_margin_16m"
                    android:layout_marginRight="@dimen/default_margin_16m">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/reset_password_new_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorTextAppearance="@style/TextInputErrorTextAppearance"
                        app:passwordToggleEnabled="false">

                        <AutoCompleteTextView
                            android:id="@+id/reset_password_new"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/password_default_padding"
                            android:drawableLeft="@drawable/ic_lock_primary"
                            android:drawablePadding="@dimen/auto_complete_text_view_default_drawable_padding"
                            android:hint="Password Baru"
                            android:textColor="@color/colorHeader"
                            android:textSize="@dimen/default_font_size_18m"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:imeOptions="actionDone"
                            style="@style/SourceSansPro_Light" />

                    </android.support.design.widget.TextInputLayout>

                    <AutoCompleteTextView
                        android:id="@+id/reset_password_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <ImageButton
                        android:id="@+id/reset_password_toggle_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="?selectableItemBackgroundBorderless"
                        android:src="@drawable/ic_visibility" />

                </RelativeLayout>

                <Button
                    android:id="@+id/reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/default_margin_16m"
                    android:layout_marginTop="@dimen/default_margin_24m"
                    android:layout_marginRight="@dimen/default_margin_16m"
                    android:padding="@dimen/default_padding_0m"
                    android:text="RESET"
                    android:textColor="@color/white"
                    android:textSize="@dimen/default_font_size_16m"
                    android:background="@drawable/primary_button"
                    android:stateListAnimator="@null"
                    style="@style/SourceSansPro_Regular" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>